--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -1,5 +1,3 @@
-<!--- Copyright (c) 2022 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy)  -->
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -8,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="/css/home/home.css">
-  <script src="./js/home/login.js" defer></script>
+  <script src="./js/home/register.js" defer></script>
   
   <title>Document</title>
 </head>
@@ -20,7 +18,7 @@
         <input id="name" type="text" placeholder="이름"/>
         <input id="pw" type="password" placeholder="비밀번호"/>
         <input id="check-pw" type="password" placeholder="비밀번호확인"/>
-        <button>SING UP</button>
+        <p id="button">SING UP</p>
         <p class="message">ALready registered? <a href="/login">login</a></p>
       </form>
     </div>
@@ -29,3 +27,4 @@
 </html>
 
 
+<!--- Copyright (c) 2022 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy)  -->
